--- a/package.json
+++ b/package.json
@@ -58,21 +58,21 @@
 		"@types/mdx": "^2.0.13",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
-		"babel-plugin-react-compiler": "0.0.0-experimental-734b737-20241003",
+		"babel-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"embla-carousel-autoplay": "^8.1.8",
 		"embla-carousel-react": "^8.1.8",
-		"eslint-plugin-react-compiler": "0.0.0-experimental-9a75bad-20241003",
+		"eslint-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
 		"eslint-plugin-react-hooks": "5.0.0",
 		"framer-motion": "12.0.0-alpha.1",
 		"jiti": "^1.21.6",
 		"lucide-react": "^0.427.0",
-		"next": "15.0.3",
+		"next": "15.0.4",
 		"next-themes": "^0.3.0",
-		"react": "19.0.0-rc-66855b96-20241106",
-		"react-dom": "19.0.0-rc-66855b96-20241106",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
 		"react-icons": "^5.3.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
@@ -81,8 +81,8 @@
 	"devDependencies": {
 		"@lavamoat/preinstall-always-fail": "^2.1.0",
 		"@types/node": "^22.3.0",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@types/react": "19.0.1",
+		"@types/react-dom": "19.0.2",
 		"eslint": "9.12.0",
 		"eslint-config-next": "15.0.2",
 		"eslint-config-prettier": "^9.1.0",
